src/sso/connections/CreateConnection/saml/index.module.css
@import url('../../../../shared/common.module.css');

.heading {
  margin-top: 1.5rem;
  margin-bottom: 1rem;
  font-weight: 700;
  color: var(--secondary-foreground-color);
}

.fieldContainer {
  display: flex;
  flex-direction: column;
  margin-bottom: 24px;
}

.label {
  display: flex;
  align-items: center;
  justify-content: space-between;
  padding: 0.5rem 0;
  font-size: 0.875rem;
  font-weight: 500;
}

.input {
  height: 3rem;
  padding: 0.5rem 1rem;
  font-size: 1rem;
  line-height: 2;
  line-height: 1.5rem;
  border: 1px solid var(--secondary-foreground-color);
  background-color: #fff;
  border-radius: var(--border-radius);
}

.input:focus-visible {
  border-color: var(--secondary-color);
  outline: 2px solid var(--primary-color-700);
  outline-offset: 2px;
}

.input:disabled,
.disabled {
  cursor: not-allowed;
  opacity: 0.5;
}

.input:disabled {
  background-color: var(--secondary-color);
  border: 1px solid transparent;
}

.textarea {
  width: 100%;
  height: 6rem;
}

.radioContainer {
  flex-direction: row;
  align-items: center;
}

.radioContainer > input {
  margin-left: 1rem;
}

.hint {
  font-size: 0.75rem;
  line-height: 1rem;
}

.formAction {
  display: flex;
  gap: 0.5rem;
}

